--- a/docs/docs/default-actions.mdx
+++ b/docs/docs/default-actions.mdx
@@ -187,3 +187,24 @@ Overriding the default action for forms should **only** be used during the proce
 migrating from Rasa Open Source 1 to 2. In this case you can override the default
 action to instruct Rasa Open Source to use the deprecated `FormAction` which is part of
 the Rasa SDK.
+
+## action_unlikely_intent
+
+Rasa Open Source triggers `action_unlikely_intent` if [`IntentTEDPolicy`](./policies.mdx#intenttedpolicy)
+predicts it and no other [rule-based policy](./policies.mdx#rule-based-policies) has predicted an action. You can control how often this action is predicted
+by tuning the [`tolerance`](./policies.mdx#intenttedpolicy) parameter of `IntentTEDPolicy`.
+
+### Customization
+
+You can customize your assistant's behaviour to configure what should happen once `action_unlikely_intent`
+is triggered. For example, as a follow up you can trigger a hand-off to a human agent with a rule:
+
+```yaml
+- rule: trigger human handoff with action_unlikely_intent
+  steps:
+    - action: action_unlikely_intent
+    - action: ask_human_handoff
+    - intent: affirm
+    - action: trigger_human_handoff
+```
+
