--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -31,6 +31,9 @@ https://github.com/RasaHQ/rasa/tree/main/changelog/ . -->
 - [#4612](https://github.com/rasahq/rasa/issues/4612): Fixed the bug that OR statements in stories would break the check whether a model needs to be retrained
 - [#8649](https://github.com/rasahq/rasa/issues/8649): Updated `python-engineio` dependency version for compatibility with `python-socketio`.
 
+### Improved Documentation
+- [#8080](https://github.com/rasahq/rasa/issues/8080): Update links to Sanic docs in the documentation.
+
 
 ## [2.3.4] - 2021-02-26
                        
